Docs: rewrite README, version-tagged release names, fix macOS label
- Rewrite README with current features, deps, 150 tests, download section
- Release archives now include version: password-manager-1.0.2-linux-x64.tar.gz
- Fix macOS label: macos-x64 -> macos-aarch64 (macos-latest is ARM)
- Update CI-RELEASE.md to match new workflow

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>